[package]
authors = ["Patrick Carroll <patrick@patrickomatic.com>"]
description = "A package for converting to and from A1 spreadsheet notation"
documentation = "https://docs.rs/a1_notation"
homepage = "https://github.com/patrickomatic/a1_notation"
keywords = ["a1", "notation", "spreadsheet", "csv", "reference"]
license = "MIT"
name = "a1_notation"
repository = "https://github.com/patrickomatic/a1_notation"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "^1", features = ["derive"] }
